--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,8 +6,8 @@ on:
   push:
     branches:
       - master
-    tags:
-      - 'v*'
+  release:
+    types: [created]
 
 jobs:
   build:
@@ -29,3 +29,14 @@ jobs:
           && cmake .. -DALL_STATIC=on \
           && make \
           && tar czfv samba.linux-x86_64.tar.gz samba
+
+      - name: Upload Release Asset
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./build/samba.linux-x86_64.tar.gz
+          asset_name: samba.linux-x86_64.tar.gz
+          asset_content_type: application/gzip
