--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ if(ALL_STATIC)
   set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc")
 endif(ALL_STATIC)
 
-find_package(Ncurses REQUIRED)
+find_package(Curses REQUIRED)
 find_package(Readline REQUIRED)
 
 include_directories(
@@ -29,7 +29,7 @@ add_executable(samba
 )
 target_link_libraries(samba
   ${READLINE_LIBRARIES}
-  ${NCURSES_LIBRARIES}
+  ${CURSES_LIBRARIES}
 )
 
 install(TARGETS samba)
