--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ if(NOT ALL_STATIC)
   find_package(Readline)
   if(READLINE_FOUND)
     add_definitions(-DHAVE_LIBREADLINE=1)
+  else(READLINE_FOUND)
+    set(READLINE_INCLUDE_DIRS "")
   endif(READLINE_FOUND)
 endif(NOT ALL_STATIC)
 
